# Dev-Assessment---Deduplication

./: Pipfile  Proposal for architecture.txt  README.md  main.py  pyproject.toml  requirements.txt
src/: main.py  solution.py
